--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,5 @@
 {
     "compilerOptions": {
-        "experimentalDecorators": true,
-        "allowJs": true
+        "experimentalDecorators": true
     }
 }
